	Lots of refactoring to clean up the mess of the editor code.
	Added Craig Jones code to make the tests work properly on windows.
	Rewrote the preferences code.
	Fixed [ 1490342 ] URL in brackets detected incorrectly
	Fixed [ 1487063 ] Some WikiWords not recognized
	Implemented [ 1444086 ] Shorten Class names in exports
	Implemented [ 1181020 ] Escape WikiWords for the TWiki Renderer

Version 2.4.2
	Fixed use of deprecated key binding services.
	Fixed [ 1243309 ] css files for help (Removed link to SnipSnap css on SnipSnap website which was breaking the Help page when the user was offline.)
	Fixed NPE when exporting Wiki Documents
Version 2.4.1
	Fixed [ 1274310 ] TWiki [[...]] doesn't work
	Removed testDummy() methods in unit tests. They were added as a result of https://bugs.eclipse.org/bugs/show_bug.cgi?id=46407
Version 2.4.0
	Merged in Ronald Steinhau's contribution for the new 'Plugin' protocol
	Fiddled with the WardsWikiRenderer style sheet
	De-camelcased rendered page titles
	Fixed [ 1124285 ] NullPointerException when typing a fullstop in the editor view
	Fixed [1159728] Can't get navigation to work
	Fixed [ 1080525 ] WardsWiki: pre section needs newline
	Improved performance of the JavaTypeMatcher at the expense of losing syntax highlighting for types in the default package
	Added [ 1063083 ] Support inlining for Eclipse: URL
	Fixed the Open Wiki Link popup menu which has been broken for a while
Version 2.3.9
	Improved the double click strategy so that word selection behaves more like other editors.
	Migrated to OSGI bundle.
	Fixed [ 1100392 ] Twiki parser error with italics, bold, etc. notation. Used TWiki's actual regex :-O
Version 2.3.8
	Fixed [ 1079107 ] No {table} with SnipSnap in browser
	Fixed [ 1079857 ] Outline view not showing headings
Version 2.3.7
	This is a major overhaul of the matchers to improve performance of the editor. 
	Added some functional tests for the renderers.
	Fixed a problem with the outline producing BadLocationExceptions