@@ -223,7 +223,10 @@ body {
 --></style>
   </head>
   <body>
-<h1>Snip Snap Content Renderer Test</h1><h1 class="heading-1">Header</h1><h1 class="heading-1-1">smaller Header</h1><p>
+<h1>Snip Snap Content Renderer Test</h1>
+<h1 class="heading-1">Header</h1>
+<h1 class="heading-1-1">smaller Header</h1>
+<p>
 </p>
 <p>
 </p>
