@@ -7,7 +7,8 @@ Version XXX
 	Fixed [ 1487063 ] Some WikiWords not recognized
 	Implemented [ 1444086 ] Shorten Class names in exports
 	Implemented [ 1181020 ] Escape WikiWords for the TWiki Renderer
-
+	Fixed [ 1490333 ] WikiWord in heading not recognized
+	
 Version 2.4.2
 	Fixed use of deprecated key binding services.
 	Fixed [ 1243309 ] css files for help (Removed link to SnipSnap css on SnipSnap website which was breaking the Help page when the user was offline.)
